--- a/style.css
+++ b/style.css
@@ -5,3 +5,7 @@ li {
 P {
   color: blueviolet
 }
+.jumbotron { 
+  background-image: url('https://kids.nationalgeographic.com/content/dam/kids/photos/articles/Nature/H-P/Habitats/Ocean/wave.ngsversion.1500050062134.adapt.1900.1.jpg');
+
+ }
